2004-11-15  Andrew Haley  <aph@redhat.com>

	* java/net/URLClassLoader.java
	(URLLoader.getClassPath): New method.
	(JarURLLoader.JarURLLoader): Read mainfest to parse "Class-Path"
	attribute and add URLs for each entry.
	(JarURLLoader.classPath): New field.
	(JarURLLoader.getClassPath): New method.
	(addURLImpl): Scan through the list of extraUrls in the new
	loader, adding them to our urlinfos.
	(definePackage, findURLResource, findResources): Use
	urlinfos.size(), not urls.size().

2004-11-11  Tom Tromey  <tromey@redhat.com>

	* gnu/gcj/runtime/natSharedLibLoader.cc (ensureSupersLinked): New
	method.
	* gnu/gcj/runtime/SharedLibHelper.java (findClass): Ensure supers
	linked.
	(ensureSupersLinked): Declare.
	* java/lang/natVMClassLoader.cc (loadClass): Ensure supers
	linked.

2004-11-10  Tom Tromey  <tromey@redhat.com>

	* gij.cc (main): Treat -verbose the same as -verbose:class.
	(help): Document -verbose and -verbose:class.

	* link.cc (verbose_class_flag): Declare.
	(wait_for_state): Print message when handling precompiled class.
	* java/lang/natClass.cc (verbose_class_flag): Moved to link.cc.

2004-11-09  Tom Tromey  <tromey@redhat.com>

	* testsuite/libjava.lang/assign2.out: New file.
	* testsuite/libjava.lang/assign2.java: New file.

	* java/lang/natRuntime.cc (insertSystemProperties): Set
	java.version to 1.4.2 and java.specification.version to 1.4.  Set
	java.runtime.version.

2004-11-08  Tom Tromey  <tromey@redhat.com>

	* java/lang/natClass.cc (_Jv_IsAssignableFromSlow): Ensure
	supers installed.
	* link.cc (verify_type_assertions): Don't link supers.

	* include/jvm.h (_Jv_Linker::search_method_in_class): Declare.
	* include/java-interp.h (class _Jv_InterpClass)
	<_Jv_PrepareMissingMethods>: No longer `friend'.
	* java/lang/Class.h (_Jv_SearchMethodInClass): No longer
	`friend'.
	(_Jv_PrepareMissingMethods, _Jv_PrepareCompiledClass,
	_Jv_GetInterfaces, _Jv_GenerateITable, _Jv_FindIIndex,
	_Jv_AppendPartialITable, _Jv_LinkSymbolTable,