@@ -1,5 +1,10 @@
 2004-11-15  Andrew Haley  <aph@redhat.com>
 
+	* boehm.cc (_Jv_GCRegisterDisappearingLink): Check that *objp is a
+	gc-allocated object.
+
+2004-11-15  Andrew Haley  <aph@redhat.com>
+
 	* java/net/URLClassLoader.java
 	(URLLoader.getClassPath): New method.
 	(JarURLLoader.JarURLLoader): Read mainfest to parse "Class-Path"
